data/derived/sp14/progs/unify/prog0758.ml.out
Characters 101-139:
  if (n /10) != 0 then digitsOfInt (n / 10) @ (n mod 10 ::[]);;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
